service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: node
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
